test/badUnitAnnotation.slq

def foo[n:!ℕ][b:qtype](){
	ys:=():b^n; /// error
}
